--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<style>
+			* {
+				padding: 0;
+				margin: 0;
+			}
+
+			h1 {
+				font-size: 2rem;
+				width: 100%;
+				height: 100vh;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				align-content: center;
+			}
+		</style>
 	</head>
 	<body>
-        <h1>Hola Mundo</h1>
-    </body>
+		<h1>Hola Mundo</h1>
+	</body>
 </html>
