--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 				justify-content: center;
 				align-items: center;
 				align-content: center;
+				color: red;
+				font-family: 'Courier New', Courier, monospace;
+				box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 			}
 		</style>
 	</head>
